--- a/src/index.css
+++ b/src/index.css
@@ -400,7 +400,7 @@ a > li > div:first-child {
 
 /* Work */ 
 #work {
-  height: 140vh;
+  height: 120vh;
 }
 
 .work {
@@ -437,7 +437,7 @@ a > li > div:first-child {
 .card > img {
   width: 50vw;
   max-width: 50vw;
-  height: 65vh;
+  height: 32vw;
   border-radius: 30px;
   object-fit: cover;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
@@ -519,7 +519,7 @@ a > li > div:first-child {
   -webkit-overflow-scrolling: touch;
   width: 100%; 
   max-width: 100vw; 
-  padding-bottom: 10px; 
+  padding-top: 30px;
 }
 
 .archive_container > div:first-child {
@@ -533,8 +533,8 @@ a > li > div:first-child {
 
 .archive_card {
   display: flex;
-  width: 41vw;
-  height: 52vh;
+  width: 47vw;
+  height: 29vw;
   background: #ffffff8c;
   border: 1px solid #ffffff;
   margin-right: 60px;
@@ -544,9 +544,9 @@ a > li > div:first-child {
 }
 
 .archive_card > img {
-  width: 40vw;
-  max-width: 40vw;
-  height: 50vh;
+  width: 45vw;
+  max-width: 45vw;
+  height: 27vw;
   border-radius: 5px;
   object-fit: cover;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -897,7 +897,11 @@ a > li > div:first-child {
   }
 
   #work {
-    height: 130vh;
+    height: 145vh;
+  }
+
+  #archive {
+    margin-top: 100px;
   }
 
   .h2 {
@@ -948,7 +952,7 @@ a > li > div:first-child {
     align-items: normal;
     justify-content: normal;
     padding: 0 20px;
-    margin-top: 100px;
+    margin-top: 80px;
   }
 
   .first_left {
@@ -1013,7 +1017,6 @@ a > li > div:first-child {
   }
 
   /* banner */
-
   .banner {
     margin-top: 100px;
     font-size: 30vw;
@@ -1023,8 +1026,8 @@ a > li > div:first-child {
   /* work */
   .card > img {
     max-width: none;
-    width: 80vw;
-    height: 65vh;
+    width: 90vw;
+    height: 60vw;
   }
 
   /* info */
@@ -1034,6 +1037,7 @@ a > li > div:first-child {
 
   .info_title {
     white-space: nowrap;
+    font-size: 35vw;
   }
 
   .info_body {
@@ -1041,11 +1045,11 @@ a > li > div:first-child {
   }
 
   .info_photo1 {
-    transform: scale(0.8) translate(-60%, -5%);
+    transform: scale(0.9) translate(-60%, 0%);
   }
 
   .info_photo2 {
-    transform: scale(0.8)  translate(60%, 5%);
+    transform: scale(0.9)  translate(60%, 10%);
   }
 
   .info1 {
@@ -1178,9 +1182,6 @@ a > li > div:first-child {
 /* Small screens */
 @media (max-width: 768px) {
   .card > img {
-    width: 90vw;
-    height: 60vw;
-    max-width: none;
     border-radius: 15px;
   }
 
