--- a/src/index.css
+++ b/src/index.css
@@ -892,6 +892,16 @@ a > li > div:first-child {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
+.underconstrunction {
+  background-color: #22C182;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  width: 100vw;
+  height: 100vh;
+}
+
 
 /* animation */
 /* ----------------------------------------------
@@ -954,7 +964,7 @@ a > li > div:first-child {
   }
 
   .h3 {
-    font-size: 22px;
+    font-size: 21px;
   }
 
   .h4 {
@@ -1318,6 +1328,26 @@ a > li > div:first-child {
 
 /* Small screens */
 @media (max-width: 768px) {
+  .card_desc {
+    display: none;
+  }
+
+  .card_circle {
+    width: 10px;
+    height: 10px;
+    margin-bottom: 3px;
+  }
+
+  .hover_work {
+    border-radius: 15px;
+    padding: 20px;
+  }
+
+  .card_title {
+    font-size: 40vw;
+    margin-bottom: -20px;
+  }
+
   .card > img {
     border-radius: 15px;
     width: 90vw;
