--- a/src/index.css
+++ b/src/index.css
@@ -173,13 +173,13 @@ header {
   text-align: right;
 }
 
-.nav:hover {
+.nav_list > .nav:hover {
   display: inline-block; 
   -webkit-animation: tracking-in-expand 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   animation: tracking-in-expand 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
-ul {
+.nav-list {
   display: flex;
   list-style-type: none;
   margin: 0;
@@ -187,19 +187,102 @@ ul {
   flex-direction: column;
 }
 
-li {
+.nav-list > li {
   padding-bottom: 12px;
   font-size: 18px;
   display: flex;
 }
 
-ul > a {
+a {
   display: flex;
   text-decoration: none;
 }
 
-a > li > div:first-child {
+.nav > li {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.nav-list > a > li > div:first-child {
   margin-right: 4px;
+}
+
+.nav:not(:nth-child(4)) {
+  margin-bottom: 5px;
+}
+
+.dropdown {
+  font-size: 17px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;align-items: baseline;
+  z-index: 10;
+}
+
+.mobile_nav {
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobile_nav_menu_title {
+  width: auto;
+  font-size: 17px;
+}
+
+.mobile_nav_drop {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  background-color: #EB5B38;
+}
+
+.mobile_nav_list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile_nav_menu {
+  font-size: 100px;
+}
+
+.mobile_nav_menu:not(:nth-child(4)) {
+  margin-bottom: 15px;
+}
+
+.mobile_nav_drop {
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.mobile_nav_drop.open {
+  opacity: 1;
+}
+
+.bi-plus {
+  width: 17px;
+  height: 17px;
+  transition: all 0.3s ease-in;
+}
+
+.rotate {
+  transform: rotate(45deg);
+}
+
+.dropdown_open {
+  color: white;
 }
 
 
@@ -986,14 +1069,12 @@ a > li > div:first-child {
   /* nav */
   header {
     width: 100vw;
-  }
-
-  .nav-list {
-    display: none;
+    padding: 20px;
   }
 
   .header_name {
     width: 60%;
+    justify-content: center;
   }
   
   .header_right, nav {
@@ -1328,6 +1409,14 @@ a > li > div:first-child {
 
 /* Small screens */
 @media (max-width: 768px) {
+  .main_nav {
+    display: none !important;
+  }
+
+  .mobile_nav {
+    display: flex;
+  }
+
   .card_desc {
     display: none;
   }
