--- a/src/index.css
+++ b/src/index.css
@@ -868,20 +868,22 @@ a {
 
 .project_role_detail {
   display: flex;
-  font-size: 24px;
+  font-size: 21px;
   margin-top: 50px;
+  
 }
 
 .project_role_detail > div:first-child {
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: 2px;
-  width: 50%;
+  width: 10vw;
 }
 
 .project_role_detail > div:nth-child(2) {
-  width: 50%;
+  width: 12vw;
   margin-left: 50px;
+  
 }
 
 .project_section {
@@ -1057,6 +1059,10 @@ a {
 
   .footer_content {
     padding: 0 210px;
+  }
+
+  .project_role_detail {
+    font-size: 28px;
   }
 }
 
@@ -1351,7 +1357,7 @@ a {
 
   .project_role_detail {
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .project_role_detail > div:first-child {
