--- a/src/index.css
+++ b/src/index.css
@@ -238,16 +238,28 @@ a {
 
 .mobile_nav_drop {
   position: absolute;
-  height: 100vh;
   width: 100vw;
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(10px);
   background-color: #EB5B38;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  visibility: hidden;
+  transition: max-height 0.5s ease, opacity 0.5s ease, visibility 0s 0.5s; 
 }
+
+.mobile_nav_drop.open {
+  height: 100vh;
+  max-height: 100vh; 
+  opacity: 1;
+  visibility: visible; 
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+}
+
 
 .mobile_nav_list {
   list-style-type: none;
@@ -267,19 +279,10 @@ a {
   margin-bottom: 15px;
 }
 
-.mobile_nav_drop {
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-}
-
-.mobile_nav_drop.open {
-  opacity: 1;
-}
-
 .bi-plus {
   width: 17px;
   height: 17px;
-  transition: all 0.3s ease-in;
+  transition: transform 0.3s;
 }
 
 .rotate {
